fix offset when drawing line numbers

also ok to backport to 4.10

FIXED-IN: 4.11
BUG: 317352